upgraded to JDK 21