@@ -20,21 +20,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class XAnyEvent {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("type"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("serial"),
-        Constants$root.C_INT$LAYOUT.withName("send_event"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("display"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("window")
-    );
     public static MemoryLayout $LAYOUT() {
-        return XAnyEvent.$struct$LAYOUT;
+        return constants$99.const$4;
     }
-    static final VarHandle type$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("type"));
     public static VarHandle type$VH() {
-        return XAnyEvent.type$VH;
+        return constants$99.const$5;
     }
     /**
      * Getter for field:
@@ -43,7 +33,7 @@ public class XAnyEvent {
      * }
      */
     public static int type$get(MemorySegment seg) {
-        return (int)XAnyEvent.type$VH.get(seg);
+        return (int)constants$99.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -52,17 +42,16 @@ public class XAnyEvent {
      * }
      */
     public static void type$set(MemorySegment seg, int x) {
-        XAnyEvent.type$VH.set(seg, x);
+        constants$99.const$5.set(seg, x);
     }
     public static int type$get(MemorySegment seg, long index) {
-        return (int)XAnyEvent.type$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$99.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void type$set(MemorySegment seg, long index, int x) {
-        XAnyEvent.type$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$99.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle serial$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("serial"));
     public static VarHandle serial$VH() {
-        return XAnyEvent.serial$VH;
+        return constants$100.const$0;
     }
     /**
      * Getter for field:
@@ -71,7 +60,7 @@ public class XAnyEvent {
      * }
      */
     public static long serial$get(MemorySegment seg) {
-        return (long)XAnyEvent.serial$VH.get(seg);
+        return (long)constants$100.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -80,17 +69,16 @@ public class XAnyEvent {
      * }
      */
     public static void serial$set(MemorySegment seg, long x) {
-        XAnyEvent.serial$VH.set(seg, x);
+        constants$100.const$0.set(seg, x);
     }
     public static long serial$get(MemorySegment seg, long index) {
-        return (long)XAnyEvent.serial$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$100.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void serial$set(MemorySegment seg, long index, long x) {
-        XAnyEvent.serial$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$100.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle send_event$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("send_event"));
     public static VarHandle send_event$VH() {
-        return XAnyEvent.send_event$VH;
+        return constants$100.const$1;
     }
     /**
      * Getter for field:
@@ -99,7 +87,7 @@ public class XAnyEvent {
      * }
      */
     public static int send_event$get(MemorySegment seg) {
-        return (int)XAnyEvent.send_event$VH.get(seg);
+        return (int)constants$100.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -108,17 +96,16 @@ public class XAnyEvent {
      * }
      */
     public static void send_event$set(MemorySegment seg, int x) {
-        XAnyEvent.send_event$VH.set(seg, x);
+        constants$100.const$1.set(seg, x);
     }
     public static int send_event$get(MemorySegment seg, long index) {
-        return (int)XAnyEvent.send_event$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$100.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void send_event$set(MemorySegment seg, long index, int x) {
-        XAnyEvent.send_event$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$100.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle display$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("display"));
     public static VarHandle display$VH() {
-        return XAnyEvent.display$VH;
+        return constants$100.const$2;
     }
     /**
      * Getter for field:
@@ -127,7 +114,7 @@ public class XAnyEvent {
      * }
      */
     public static MemorySegment display$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)XAnyEvent.display$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$100.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -136,17 +123,16 @@ public class XAnyEvent {
      * }
      */
     public static void display$set(MemorySegment seg, MemorySegment x) {
-        XAnyEvent.display$VH.set(seg, x);
+        constants$100.const$2.set(seg, x);
     }
     public static MemorySegment display$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)XAnyEvent.display$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$100.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void display$set(MemorySegment seg, long index, MemorySegment x) {
-        XAnyEvent.display$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$100.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle window$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("window"));
     public static VarHandle window$VH() {
-        return XAnyEvent.window$VH;
+        return constants$100.const$3;
     }
     /**
      * Getter for field:
@@ -155,7 +141,7 @@ public class XAnyEvent {
      * }
      */
     public static long window$get(MemorySegment seg) {
-        return (long)XAnyEvent.window$VH.get(seg);
+        return (long)constants$100.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -164,20 +150,20 @@ public class XAnyEvent {
      * }
      */
     public static void window$set(MemorySegment seg, long x) {
-        XAnyEvent.window$VH.set(seg, x);
+        constants$100.const$3.set(seg, x);
     }
     public static long window$get(MemorySegment seg, long index) {
-        return (long)XAnyEvent.window$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$100.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void window$set(MemorySegment seg, long index, long x) {
-        XAnyEvent.window$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$100.const$3.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
