@@ -21,20 +21,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class XArc {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_SHORT$LAYOUT.withName("x"),
-        Constants$root.C_SHORT$LAYOUT.withName("y"),
-        Constants$root.C_SHORT$LAYOUT.withName("width"),
-        Constants$root.C_SHORT$LAYOUT.withName("height"),
-        Constants$root.C_SHORT$LAYOUT.withName("angle1"),
-        Constants$root.C_SHORT$LAYOUT.withName("angle2")
-    );
     public static MemoryLayout $LAYOUT() {
-        return XArc.$struct$LAYOUT;
+        return constants$43.const$2;
     }
-    static final VarHandle x$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("x"));
     public static VarHandle x$VH() {
-        return XArc.x$VH;
+        return constants$43.const$3;
     }
     /**
      * Getter for field:
@@ -43,7 +34,7 @@ public class XArc {
      * }
      */
     public static short x$get(MemorySegment seg) {
-        return (short)XArc.x$VH.get(seg);
+        return (short)constants$43.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -52,17 +43,16 @@ public class XArc {
      * }
      */
     public static void x$set(MemorySegment seg, short x) {
-        XArc.x$VH.set(seg, x);
+        constants$43.const$3.set(seg, x);
     }
     public static short x$get(MemorySegment seg, long index) {
-        return (short)XArc.x$VH.get(seg.asSlice(index*sizeof()));
+        return (short)constants$43.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void x$set(MemorySegment seg, long index, short x) {
-        XArc.x$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$43.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle y$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("y"));
     public static VarHandle y$VH() {
-        return XArc.y$VH;
+        return constants$43.const$4;
     }
     /**
      * Getter for field:
@@ -71,7 +61,7 @@ public class XArc {
      * }
      */
     public static short y$get(MemorySegment seg) {
-        return (short)XArc.y$VH.get(seg);
+        return (short)constants$43.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -80,17 +70,16 @@ public class XArc {
      * }
      */
     public static void y$set(MemorySegment seg, short x) {
-        XArc.y$VH.set(seg, x);
+        constants$43.const$4.set(seg, x);
     }
     public static short y$get(MemorySegment seg, long index) {
-        return (short)XArc.y$VH.get(seg.asSlice(index*sizeof()));
+        return (short)constants$43.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void y$set(MemorySegment seg, long index, short x) {
-        XArc.y$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$43.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle width$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("width"));
     public static VarHandle width$VH() {
-        return XArc.width$VH;
+        return constants$43.const$5;
     }
     /**
      * Getter for field:
@@ -99,7 +88,7 @@ public class XArc {
      * }
      */
     public static short width$get(MemorySegment seg) {
-        return (short)XArc.width$VH.get(seg);
+        return (short)constants$43.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -108,17 +97,16 @@ public class XArc {
      * }
      */
     public static void width$set(MemorySegment seg, short x) {
-        XArc.width$VH.set(seg, x);
+        constants$43.const$5.set(seg, x);
     }
     public static short width$get(MemorySegment seg, long index) {
-        return (short)XArc.width$VH.get(seg.asSlice(index*sizeof()));
+        return (short)constants$43.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void width$set(MemorySegment seg, long index, short x) {
-        XArc.width$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$43.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle height$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("height"));
     public static VarHandle height$VH() {
-        return XArc.height$VH;
+        return constants$44.const$0;
     }
     /**
      * Getter for field:
@@ -127,7 +115,7 @@ public class XArc {
      * }
      */
     public static short height$get(MemorySegment seg) {
-        return (short)XArc.height$VH.get(seg);
+        return (short)constants$44.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -136,17 +124,16 @@ public class XArc {
      * }
      */
     public static void height$set(MemorySegment seg, short x) {
-        XArc.height$VH.set(seg, x);
+        constants$44.const$0.set(seg, x);
     }
     public static short height$get(MemorySegment seg, long index) {
-        return (short)XArc.height$VH.get(seg.asSlice(index*sizeof()));
+        return (short)constants$44.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void height$set(MemorySegment seg, long index, short x) {
-        XArc.height$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$44.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle angle1$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("angle1"));
     public static VarHandle angle1$VH() {
-        return XArc.angle1$VH;
+        return constants$44.const$1;
     }
     /**
      * Getter for field:
@@ -155,7 +142,7 @@ public class XArc {
      * }
      */
     public static short angle1$get(MemorySegment seg) {
-        return (short)XArc.angle1$VH.get(seg);
+        return (short)constants$44.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -164,17 +151,16 @@ public class XArc {
      * }
      */
     public static void angle1$set(MemorySegment seg, short x) {
-        XArc.angle1$VH.set(seg, x);
+        constants$44.const$1.set(seg, x);
     }
     public static short angle1$get(MemorySegment seg, long index) {
-        return (short)XArc.angle1$VH.get(seg.asSlice(index*sizeof()));
+        return (short)constants$44.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void angle1$set(MemorySegment seg, long index, short x) {
-        XArc.angle1$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$44.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle angle2$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("angle2"));
     public static VarHandle angle2$VH() {
-        return XArc.angle2$VH;
+        return constants$44.const$2;
     }
     /**
      * Getter for field:
@@ -183,7 +169,7 @@ public class XArc {
      * }
      */
     public static short angle2$get(MemorySegment seg) {
-        return (short)XArc.angle2$VH.get(seg);
+        return (short)constants$44.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -192,20 +178,20 @@ public class XArc {
      * }
      */
     public static void angle2$set(MemorySegment seg, short x) {
-        XArc.angle2$VH.set(seg, x);
+        constants$44.const$2.set(seg, x);
     }
     public static short angle2$get(MemorySegment seg, long index) {
-        return (short)XArc.angle2$VH.get(seg.asSlice(index*sizeof()));
+        return (short)constants$44.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void angle2$set(MemorySegment seg, long index, short x) {
-        XArc.angle2$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$44.const$2.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
