@@ -22,24 +22,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class XCirculateRequestEvent {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("type"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("serial"),
-        Constants$root.C_INT$LAYOUT.withName("send_event"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("display"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("parent"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("window"),
-        Constants$root.C_INT$LAYOUT.withName("place"),
-        MemoryLayout.paddingLayout(32)
-    );
     public static MemoryLayout $LAYOUT() {
-        return XCirculateRequestEvent.$struct$LAYOUT;
+        return constants$86.const$1;
     }
-    static final VarHandle type$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("type"));
     public static VarHandle type$VH() {
-        return XCirculateRequestEvent.type$VH;
+        return constants$86.const$2;
     }
     /**
      * Getter for field:
@@ -48,7 +35,7 @@ public class XCirculateRequestEvent {
      * }
      */
     public static int type$get(MemorySegment seg) {
-        return (int)XCirculateRequestEvent.type$VH.get(seg);
+        return (int)constants$86.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -57,17 +44,16 @@ public class XCirculateRequestEvent {
      * }
      */
     public static void type$set(MemorySegment seg, int x) {
-        XCirculateRequestEvent.type$VH.set(seg, x);
+        constants$86.const$2.set(seg, x);
     }
     public static int type$get(MemorySegment seg, long index) {
-        return (int)XCirculateRequestEvent.type$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$86.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void type$set(MemorySegment seg, long index, int x) {
-        XCirculateRequestEvent.type$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$86.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle serial$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("serial"));
     public static VarHandle serial$VH() {
-        return XCirculateRequestEvent.serial$VH;
+        return constants$86.const$3;
     }
     /**
      * Getter for field:
@@ -76,7 +62,7 @@ public class XCirculateRequestEvent {
      * }
      */
     public static long serial$get(MemorySegment seg) {
-        return (long)XCirculateRequestEvent.serial$VH.get(seg);
+        return (long)constants$86.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -85,17 +71,16 @@ public class XCirculateRequestEvent {
      * }
      */
     public static void serial$set(MemorySegment seg, long x) {
-        XCirculateRequestEvent.serial$VH.set(seg, x);
+        constants$86.const$3.set(seg, x);
     }
     public static long serial$get(MemorySegment seg, long index) {
-        return (long)XCirculateRequestEvent.serial$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$86.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void serial$set(MemorySegment seg, long index, long x) {
-        XCirculateRequestEvent.serial$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$86.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle send_event$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("send_event"));
     public static VarHandle send_event$VH() {
-        return XCirculateRequestEvent.send_event$VH;
+        return constants$86.const$4;
     }
     /**
      * Getter for field:
@@ -104,7 +89,7 @@ public class XCirculateRequestEvent {
      * }
      */
     public static int send_event$get(MemorySegment seg) {
-        return (int)XCirculateRequestEvent.send_event$VH.get(seg);
+        return (int)constants$86.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -113,17 +98,16 @@ public class XCirculateRequestEvent {
      * }
      */
     public static void send_event$set(MemorySegment seg, int x) {
-        XCirculateRequestEvent.send_event$VH.set(seg, x);
+        constants$86.const$4.set(seg, x);
     }
     public static int send_event$get(MemorySegment seg, long index) {
-        return (int)XCirculateRequestEvent.send_event$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$86.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void send_event$set(MemorySegment seg, long index, int x) {
-        XCirculateRequestEvent.send_event$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$86.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle display$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("display"));
     public static VarHandle display$VH() {
-        return XCirculateRequestEvent.display$VH;
+        return constants$86.const$5;
     }
     /**
      * Getter for field:
@@ -132,7 +116,7 @@ public class XCirculateRequestEvent {
      * }
      */
     public static MemorySegment display$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)XCirculateRequestEvent.display$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$86.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -141,17 +125,16 @@ public class XCirculateRequestEvent {
      * }
      */
     public static void display$set(MemorySegment seg, MemorySegment x) {
-        XCirculateRequestEvent.display$VH.set(seg, x);
+        constants$86.const$5.set(seg, x);
     }
     public static MemorySegment display$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)XCirculateRequestEvent.display$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$86.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void display$set(MemorySegment seg, long index, MemorySegment x) {
-        XCirculateRequestEvent.display$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$86.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle parent$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("parent"));
     public static VarHandle parent$VH() {
-        return XCirculateRequestEvent.parent$VH;
+        return constants$87.const$0;
     }
     /**
      * Getter for field:
@@ -160,7 +143,7 @@ public class XCirculateRequestEvent {
      * }
      */
     public static long parent$get(MemorySegment seg) {
-        return (long)XCirculateRequestEvent.parent$VH.get(seg);
+        return (long)constants$87.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -169,17 +152,16 @@ public class XCirculateRequestEvent {
      * }
      */
     public static void parent$set(MemorySegment seg, long x) {
-        XCirculateRequestEvent.parent$VH.set(seg, x);
+        constants$87.const$0.set(seg, x);
     }
     public static long parent$get(MemorySegment seg, long index) {
-        return (long)XCirculateRequestEvent.parent$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$87.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void parent$set(MemorySegment seg, long index, long x) {
-        XCirculateRequestEvent.parent$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$87.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle window$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("window"));
     public static VarHandle window$VH() {
-        return XCirculateRequestEvent.window$VH;
+        return constants$87.const$1;
     }
     /**
      * Getter for field:
@@ -188,7 +170,7 @@ public class XCirculateRequestEvent {
      * }
      */
     public static long window$get(MemorySegment seg) {
-        return (long)XCirculateRequestEvent.window$VH.get(seg);
+        return (long)constants$87.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -197,17 +179,16 @@ public class XCirculateRequestEvent {
      * }
      */
     public static void window$set(MemorySegment seg, long x) {
-        XCirculateRequestEvent.window$VH.set(seg, x);
+        constants$87.const$1.set(seg, x);
     }
     public static long window$get(MemorySegment seg, long index) {
-        return (long)XCirculateRequestEvent.window$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$87.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void window$set(MemorySegment seg, long index, long x) {
-        XCirculateRequestEvent.window$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$87.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle place$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("place"));
     public static VarHandle place$VH() {
-        return XCirculateRequestEvent.place$VH;
+        return constants$87.const$2;
     }
     /**
      * Getter for field:
@@ -216,7 +197,7 @@ public class XCirculateRequestEvent {
      * }
      */
     public static int place$get(MemorySegment seg) {
-        return (int)XCirculateRequestEvent.place$VH.get(seg);
+        return (int)constants$87.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -225,20 +206,20 @@ public class XCirculateRequestEvent {
      * }
      */
     public static void place$set(MemorySegment seg, int x) {
-        XCirculateRequestEvent.place$VH.set(seg, x);
+        constants$87.const$2.set(seg, x);
     }
     public static int place$get(MemorySegment seg, long index) {
-        return (int)XCirculateRequestEvent.place$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$87.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void place$set(MemorySegment seg, long index, int x) {
-        XCirculateRequestEvent.place$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$87.const$2.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
