@@ -23,29 +23,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class XClientMessageEvent {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("type"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("serial"),
-        Constants$root.C_INT$LAYOUT.withName("send_event"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("display"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("window"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("message_type"),
-        Constants$root.C_INT$LAYOUT.withName("format"),
-        MemoryLayout.paddingLayout(32),
-        MemoryLayout.unionLayout(
-            MemoryLayout.sequenceLayout(20, Constants$root.C_CHAR$LAYOUT).withName("b"),
-            MemoryLayout.sequenceLayout(10, Constants$root.C_SHORT$LAYOUT).withName("s"),
-            MemoryLayout.sequenceLayout(5, Constants$root.C_LONG_LONG$LAYOUT).withName("l")
-        ).withName("data")
-    );
     public static MemoryLayout $LAYOUT() {
-        return XClientMessageEvent.$struct$LAYOUT;
+        return constants$95.const$2;
     }
-    static final VarHandle type$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("type"));
     public static VarHandle type$VH() {
-        return XClientMessageEvent.type$VH;
+        return constants$95.const$3;
     }
     /**
      * Getter for field:
@@ -54,7 +36,7 @@ public class XClientMessageEvent {
      * }
      */
     public static int type$get(MemorySegment seg) {
-        return (int)XClientMessageEvent.type$VH.get(seg);
+        return (int)constants$95.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -63,17 +45,16 @@ public class XClientMessageEvent {
      * }
      */
     public static void type$set(MemorySegment seg, int x) {
-        XClientMessageEvent.type$VH.set(seg, x);
+        constants$95.const$3.set(seg, x);
     }
     public static int type$get(MemorySegment seg, long index) {
-        return (int)XClientMessageEvent.type$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$95.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void type$set(MemorySegment seg, long index, int x) {
-        XClientMessageEvent.type$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$95.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle serial$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("serial"));
     public static VarHandle serial$VH() {
-        return XClientMessageEvent.serial$VH;
+        return constants$95.const$4;
     }
     /**
      * Getter for field:
@@ -82,7 +63,7 @@ public class XClientMessageEvent {
      * }
      */
     public static long serial$get(MemorySegment seg) {
-        return (long)XClientMessageEvent.serial$VH.get(seg);
+        return (long)constants$95.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -91,17 +72,16 @@ public class XClientMessageEvent {
      * }
      */
     public static void serial$set(MemorySegment seg, long x) {
-        XClientMessageEvent.serial$VH.set(seg, x);
+        constants$95.const$4.set(seg, x);
     }
     public static long serial$get(MemorySegment seg, long index) {
-        return (long)XClientMessageEvent.serial$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$95.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void serial$set(MemorySegment seg, long index, long x) {
-        XClientMessageEvent.serial$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$95.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle send_event$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("send_event"));
     public static VarHandle send_event$VH() {
-        return XClientMessageEvent.send_event$VH;
+        return constants$95.const$5;
     }
     /**
      * Getter for field:
@@ -110,7 +90,7 @@ public class XClientMessageEvent {
      * }
      */
     public static int send_event$get(MemorySegment seg) {
-        return (int)XClientMessageEvent.send_event$VH.get(seg);
+        return (int)constants$95.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -119,17 +99,16 @@ public class XClientMessageEvent {
      * }
      */
     public static void send_event$set(MemorySegment seg, int x) {
-        XClientMessageEvent.send_event$VH.set(seg, x);
+        constants$95.const$5.set(seg, x);
     }
     public static int send_event$get(MemorySegment seg, long index) {
-        return (int)XClientMessageEvent.send_event$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$95.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void send_event$set(MemorySegment seg, long index, int x) {
-        XClientMessageEvent.send_event$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$95.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle display$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("display"));
     public static VarHandle display$VH() {
-        return XClientMessageEvent.display$VH;
+        return constants$96.const$0;
     }
     /**
      * Getter for field:
@@ -138,7 +117,7 @@ public class XClientMessageEvent {
      * }
      */
     public static MemorySegment display$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)XClientMessageEvent.display$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$96.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -147,17 +126,16 @@ public class XClientMessageEvent {
      * }
      */
     public static void display$set(MemorySegment seg, MemorySegment x) {
-        XClientMessageEvent.display$VH.set(seg, x);
+        constants$96.const$0.set(seg, x);
     }
     public static MemorySegment display$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)XClientMessageEvent.display$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$96.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void display$set(MemorySegment seg, long index, MemorySegment x) {
-        XClientMessageEvent.display$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$96.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle window$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("window"));
     public static VarHandle window$VH() {
-        return XClientMessageEvent.window$VH;
+        return constants$96.const$1;
     }
     /**
      * Getter for field:
@@ -166,7 +144,7 @@ public class XClientMessageEvent {
      * }
      */
     public static long window$get(MemorySegment seg) {
-        return (long)XClientMessageEvent.window$VH.get(seg);
+        return (long)constants$96.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -175,17 +153,16 @@ public class XClientMessageEvent {
      * }
      */
     public static void window$set(MemorySegment seg, long x) {
-        XClientMessageEvent.window$VH.set(seg, x);
+        constants$96.const$1.set(seg, x);
     }
     public static long window$get(MemorySegment seg, long index) {
-        return (long)XClientMessageEvent.window$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$96.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void window$set(MemorySegment seg, long index, long x) {
-        XClientMessageEvent.window$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$96.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle message_type$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("message_type"));
     public static VarHandle message_type$VH() {
-        return XClientMessageEvent.message_type$VH;
+        return constants$96.const$2;
     }
     /**
      * Getter for field:
@@ -194,7 +171,7 @@ public class XClientMessageEvent {
      * }
      */
     public static long message_type$get(MemorySegment seg) {
-        return (long)XClientMessageEvent.message_type$VH.get(seg);
+        return (long)constants$96.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -203,17 +180,16 @@ public class XClientMessageEvent {
      * }
      */
     public static void message_type$set(MemorySegment seg, long x) {
-        XClientMessageEvent.message_type$VH.set(seg, x);
+        constants$96.const$2.set(seg, x);
     }
     public static long message_type$get(MemorySegment seg, long index) {
-        return (long)XClientMessageEvent.message_type$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$96.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void message_type$set(MemorySegment seg, long index, long x) {
-        XClientMessageEvent.message_type$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$96.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle format$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("format"));
     public static VarHandle format$VH() {
-        return XClientMessageEvent.format$VH;
+        return constants$96.const$3;
     }
     /**
      * Getter for field:
@@ -222,7 +198,7 @@ public class XClientMessageEvent {
      * }
      */
     public static int format$get(MemorySegment seg) {
-        return (int)XClientMessageEvent.format$VH.get(seg);
+        return (int)constants$96.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -231,13 +207,13 @@ public class XClientMessageEvent {
      * }
      */
     public static void format$set(MemorySegment seg, int x) {
-        XClientMessageEvent.format$VH.set(seg, x);
+        constants$96.const$3.set(seg, x);
     }
     public static int format$get(MemorySegment seg, long index) {
-        return (int)XClientMessageEvent.format$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$96.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void format$set(MemorySegment seg, long index, int x) {
-        XClientMessageEvent.format$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$96.const$3.set(seg.asSlice(index*sizeof()), x);
     }
     /**
      * {@snippet :
@@ -252,13 +228,8 @@ public class XClientMessageEvent {
 
         // Suppresses default constructor, ensuring non-instantiability.
         private data() {}
-        static final UnionLayout data$union$LAYOUT = MemoryLayout.unionLayout(
-            MemoryLayout.sequenceLayout(20, Constants$root.C_CHAR$LAYOUT).withName("b"),
-            MemoryLayout.sequenceLayout(10, Constants$root.C_SHORT$LAYOUT).withName("s"),
-            MemoryLayout.sequenceLayout(5, Constants$root.C_LONG_LONG$LAYOUT).withName("l")
-        );
         public static MemoryLayout $LAYOUT() {
-            return data.data$union$LAYOUT;
+            return constants$96.const$4;
         }
         public static MemorySegment b$slice(MemorySegment seg) {
             return seg.asSlice(0, 20);
@@ -274,7 +245,7 @@ public class XClientMessageEvent {
         public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
             return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
         }
-        public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+        public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
     }
 
     public static MemorySegment data$slice(MemorySegment seg) {
@@ -285,7 +256,7 @@ public class XClientMessageEvent {
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
