@@ -27,28 +27,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class XCreateWindowEvent {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("type"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("serial"),
-        Constants$root.C_INT$LAYOUT.withName("send_event"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("display"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("parent"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("window"),
-        Constants$root.C_INT$LAYOUT.withName("x"),
-        Constants$root.C_INT$LAYOUT.withName("y"),
-        Constants$root.C_INT$LAYOUT.withName("width"),
-        Constants$root.C_INT$LAYOUT.withName("height"),
-        Constants$root.C_INT$LAYOUT.withName("border_width"),
-        Constants$root.C_INT$LAYOUT.withName("override_redirect")
-    );
     public static MemoryLayout $LAYOUT() {
-        return XCreateWindowEvent.$struct$LAYOUT;
+        return constants$68.const$1;
     }
-    static final VarHandle type$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("type"));
     public static VarHandle type$VH() {
-        return XCreateWindowEvent.type$VH;
+        return constants$68.const$2;
     }
     /**
      * Getter for field:
@@ -57,7 +40,7 @@ public class XCreateWindowEvent {
      * }
      */
     public static int type$get(MemorySegment seg) {
-        return (int)XCreateWindowEvent.type$VH.get(seg);
+        return (int)constants$68.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -66,17 +49,16 @@ public class XCreateWindowEvent {
      * }
      */
     public static void type$set(MemorySegment seg, int x) {
-        XCreateWindowEvent.type$VH.set(seg, x);
+        constants$68.const$2.set(seg, x);
     }
     public static int type$get(MemorySegment seg, long index) {
-        return (int)XCreateWindowEvent.type$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$68.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void type$set(MemorySegment seg, long index, int x) {
-        XCreateWindowEvent.type$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$68.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle serial$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("serial"));
     public static VarHandle serial$VH() {
-        return XCreateWindowEvent.serial$VH;
+        return constants$68.const$3;
     }
     /**
      * Getter for field:
@@ -85,7 +67,7 @@ public class XCreateWindowEvent {
      * }
      */
     public static long serial$get(MemorySegment seg) {
-        return (long)XCreateWindowEvent.serial$VH.get(seg);
+        return (long)constants$68.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -94,17 +76,16 @@ public class XCreateWindowEvent {
      * }
      */
     public static void serial$set(MemorySegment seg, long x) {
-        XCreateWindowEvent.serial$VH.set(seg, x);
+        constants$68.const$3.set(seg, x);
     }
     public static long serial$get(MemorySegment seg, long index) {
-        return (long)XCreateWindowEvent.serial$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$68.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void serial$set(MemorySegment seg, long index, long x) {
-        XCreateWindowEvent.serial$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$68.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle send_event$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("send_event"));
     public static VarHandle send_event$VH() {
-        return XCreateWindowEvent.send_event$VH;
+        return constants$68.const$4;
     }
     /**
      * Getter for field:
@@ -113,7 +94,7 @@ public class XCreateWindowEvent {
      * }
      */
     public static int send_event$get(MemorySegment seg) {
-        return (int)XCreateWindowEvent.send_event$VH.get(seg);
+        return (int)constants$68.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -122,17 +103,16 @@ public class XCreateWindowEvent {
      * }
      */
     public static void send_event$set(MemorySegment seg, int x) {
-        XCreateWindowEvent.send_event$VH.set(seg, x);
+        constants$68.const$4.set(seg, x);
     }
     public static int send_event$get(MemorySegment seg, long index) {
-        return (int)XCreateWindowEvent.send_event$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$68.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void send_event$set(MemorySegment seg, long index, int x) {
-        XCreateWindowEvent.send_event$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$68.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle display$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("display"));
     public static VarHandle display$VH() {
-        return XCreateWindowEvent.display$VH;
+        return constants$68.const$5;
     }
     /**
      * Getter for field:
@@ -141,7 +121,7 @@ public class XCreateWindowEvent {
      * }
      */
     public static MemorySegment display$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)XCreateWindowEvent.display$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$68.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -150,17 +130,16 @@ public class XCreateWindowEvent {
      * }
      */
     public static void display$set(MemorySegment seg, MemorySegment x) {
-        XCreateWindowEvent.display$VH.set(seg, x);
+        constants$68.const$5.set(seg, x);
     }
     public static MemorySegment display$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)XCreateWindowEvent.display$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$68.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void display$set(MemorySegment seg, long index, MemorySegment x) {
-        XCreateWindowEvent.display$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$68.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle parent$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("parent"));
     public static VarHandle parent$VH() {
-        return XCreateWindowEvent.parent$VH;
+        return constants$69.const$0;
     }
     /**
      * Getter for field:
@@ -169,7 +148,7 @@ public class XCreateWindowEvent {
      * }
      */
     public static long parent$get(MemorySegment seg) {
-        return (long)XCreateWindowEvent.parent$VH.get(seg);
+        return (long)constants$69.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -178,17 +157,16 @@ public class XCreateWindowEvent {
      * }
      */
     public static void parent$set(MemorySegment seg, long x) {
-        XCreateWindowEvent.parent$VH.set(seg, x);
+        constants$69.const$0.set(seg, x);
     }
     public static long parent$get(MemorySegment seg, long index) {
-        return (long)XCreateWindowEvent.parent$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$69.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void parent$set(MemorySegment seg, long index, long x) {
-        XCreateWindowEvent.parent$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$69.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle window$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("window"));
     public static VarHandle window$VH() {
-        return XCreateWindowEvent.window$VH;
+        return constants$69.const$1;
     }
     /**
      * Getter for field:
@@ -197,7 +175,7 @@ public class XCreateWindowEvent {
      * }
      */
     public static long window$get(MemorySegment seg) {
-        return (long)XCreateWindowEvent.window$VH.get(seg);
+        return (long)constants$69.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -206,17 +184,16 @@ public class XCreateWindowEvent {
      * }
      */
     public static void window$set(MemorySegment seg, long x) {
-        XCreateWindowEvent.window$VH.set(seg, x);
+        constants$69.const$1.set(seg, x);
     }
     public static long window$get(MemorySegment seg, long index) {
-        return (long)XCreateWindowEvent.window$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$69.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void window$set(MemorySegment seg, long index, long x) {
-        XCreateWindowEvent.window$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$69.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle x$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("x"));
     public static VarHandle x$VH() {
-        return XCreateWindowEvent.x$VH;
+        return constants$69.const$2;
     }
     /**
      * Getter for field:
@@ -225,7 +202,7 @@ public class XCreateWindowEvent {
      * }
      */
     public static int x$get(MemorySegment seg) {
-        return (int)XCreateWindowEvent.x$VH.get(seg);
+        return (int)constants$69.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -234,17 +211,16 @@ public class XCreateWindowEvent {
      * }
      */
     public static void x$set(MemorySegment seg, int x) {
-        XCreateWindowEvent.x$VH.set(seg, x);
+        constants$69.const$2.set(seg, x);
     }
     public static int x$get(MemorySegment seg, long index) {
-        return (int)XCreateWindowEvent.x$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$69.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void x$set(MemorySegment seg, long index, int x) {
-        XCreateWindowEvent.x$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$69.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle y$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("y"));
     public static VarHandle y$VH() {
-        return XCreateWindowEvent.y$VH;
+        return constants$69.const$3;
     }
     /**
      * Getter for field:
@@ -253,7 +229,7 @@ public class XCreateWindowEvent {
      * }
      */
     public static int y$get(MemorySegment seg) {
-        return (int)XCreateWindowEvent.y$VH.get(seg);
+        return (int)constants$69.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -262,17 +238,16 @@ public class XCreateWindowEvent {
      * }
      */
     public static void y$set(MemorySegment seg, int x) {
-        XCreateWindowEvent.y$VH.set(seg, x);
+        constants$69.const$3.set(seg, x);
     }
     public static int y$get(MemorySegment seg, long index) {
-        return (int)XCreateWindowEvent.y$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$69.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void y$set(MemorySegment seg, long index, int x) {
-        XCreateWindowEvent.y$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$69.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle width$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("width"));
     public static VarHandle width$VH() {
-        return XCreateWindowEvent.width$VH;
+        return constants$69.const$4;
     }
     /**
      * Getter for field:
@@ -281,7 +256,7 @@ public class XCreateWindowEvent {
      * }
      */
     public static int width$get(MemorySegment seg) {
-        return (int)XCreateWindowEvent.width$VH.get(seg);
+        return (int)constants$69.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -290,17 +265,16 @@ public class XCreateWindowEvent {
      * }
      */
     public static void width$set(MemorySegment seg, int x) {
-        XCreateWindowEvent.width$VH.set(seg, x);
+        constants$69.const$4.set(seg, x);
     }
     public static int width$get(MemorySegment seg, long index) {
-        return (int)XCreateWindowEvent.width$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$69.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void width$set(MemorySegment seg, long index, int x) {
-        XCreateWindowEvent.width$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$69.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle height$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("height"));
     public static VarHandle height$VH() {
-        return XCreateWindowEvent.height$VH;
+        return constants$69.const$5;
     }
     /**
      * Getter for field:
@@ -309,7 +283,7 @@ public class XCreateWindowEvent {
      * }
      */
     public static int height$get(MemorySegment seg) {
-        return (int)XCreateWindowEvent.height$VH.get(seg);
+        return (int)constants$69.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -318,17 +292,16 @@ public class XCreateWindowEvent {
      * }
      */
     public static void height$set(MemorySegment seg, int x) {
-        XCreateWindowEvent.height$VH.set(seg, x);
+        constants$69.const$5.set(seg, x);
     }
     public static int height$get(MemorySegment seg, long index) {
-        return (int)XCreateWindowEvent.height$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$69.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void height$set(MemorySegment seg, long index, int x) {
-        XCreateWindowEvent.height$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$69.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle border_width$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("border_width"));
     public static VarHandle border_width$VH() {
-        return XCreateWindowEvent.border_width$VH;
+        return constants$70.const$0;
     }
     /**
      * Getter for field:
@@ -337,7 +310,7 @@ public class XCreateWindowEvent {
      * }
      */
     public static int border_width$get(MemorySegment seg) {
-        return (int)XCreateWindowEvent.border_width$VH.get(seg);
+        return (int)constants$70.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -346,17 +319,16 @@ public class XCreateWindowEvent {
      * }
      */
     public static void border_width$set(MemorySegment seg, int x) {
-        XCreateWindowEvent.border_width$VH.set(seg, x);
+        constants$70.const$0.set(seg, x);
     }
     public static int border_width$get(MemorySegment seg, long index) {
-        return (int)XCreateWindowEvent.border_width$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$70.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void border_width$set(MemorySegment seg, long index, int x) {
-        XCreateWindowEvent.border_width$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$70.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle override_redirect$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("override_redirect"));
     public static VarHandle override_redirect$VH() {
-        return XCreateWindowEvent.override_redirect$VH;
+        return constants$70.const$1;
     }
     /**
      * Getter for field:
@@ -365,7 +337,7 @@ public class XCreateWindowEvent {
      * }
      */
     public static int override_redirect$get(MemorySegment seg) {
-        return (int)XCreateWindowEvent.override_redirect$VH.get(seg);
+        return (int)constants$70.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -374,20 +346,20 @@ public class XCreateWindowEvent {
      * }
      */
     public static void override_redirect$set(MemorySegment seg, int x) {
-        XCreateWindowEvent.override_redirect$VH.set(seg, x);
+        constants$70.const$1.set(seg, x);
     }
     public static int override_redirect$get(MemorySegment seg, long index) {
-        return (int)XCreateWindowEvent.override_redirect$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$70.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void override_redirect$set(MemorySegment seg, long index, int x) {
-        XCreateWindowEvent.override_redirect$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$70.const$1.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
