@@ -25,27 +25,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class XExposeEvent {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("type"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("serial"),
-        Constants$root.C_INT$LAYOUT.withName("send_event"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("display"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("window"),
-        Constants$root.C_INT$LAYOUT.withName("x"),
-        Constants$root.C_INT$LAYOUT.withName("y"),
-        Constants$root.C_INT$LAYOUT.withName("width"),
-        Constants$root.C_INT$LAYOUT.withName("height"),
-        Constants$root.C_INT$LAYOUT.withName("count"),
-        MemoryLayout.paddingLayout(32)
-    );
     public static MemoryLayout $LAYOUT() {
-        return XExposeEvent.$struct$LAYOUT;
+        return constants$61.const$4;
     }
-    static final VarHandle type$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("type"));
     public static VarHandle type$VH() {
-        return XExposeEvent.type$VH;
+        return constants$61.const$5;
     }
     /**
      * Getter for field:
@@ -54,7 +38,7 @@ public class XExposeEvent {
      * }
      */
     public static int type$get(MemorySegment seg) {
-        return (int)XExposeEvent.type$VH.get(seg);
+        return (int)constants$61.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -63,17 +47,16 @@ public class XExposeEvent {
      * }
      */
     public static void type$set(MemorySegment seg, int x) {
-        XExposeEvent.type$VH.set(seg, x);
+        constants$61.const$5.set(seg, x);
     }
     public static int type$get(MemorySegment seg, long index) {
-        return (int)XExposeEvent.type$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$61.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void type$set(MemorySegment seg, long index, int x) {
-        XExposeEvent.type$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$61.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle serial$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("serial"));
     public static VarHandle serial$VH() {
-        return XExposeEvent.serial$VH;
+        return constants$62.const$0;
     }
     /**
      * Getter for field:
@@ -82,7 +65,7 @@ public class XExposeEvent {
      * }
      */
     public static long serial$get(MemorySegment seg) {
-        return (long)XExposeEvent.serial$VH.get(seg);
+        return (long)constants$62.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -91,17 +74,16 @@ public class XExposeEvent {
      * }
      */
     public static void serial$set(MemorySegment seg, long x) {
-        XExposeEvent.serial$VH.set(seg, x);
+        constants$62.const$0.set(seg, x);
     }
     public static long serial$get(MemorySegment seg, long index) {
-        return (long)XExposeEvent.serial$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$62.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void serial$set(MemorySegment seg, long index, long x) {
-        XExposeEvent.serial$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$62.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle send_event$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("send_event"));
     public static VarHandle send_event$VH() {
-        return XExposeEvent.send_event$VH;
+        return constants$62.const$1;
     }
     /**
      * Getter for field:
@@ -110,7 +92,7 @@ public class XExposeEvent {
      * }
      */
     public static int send_event$get(MemorySegment seg) {
-        return (int)XExposeEvent.send_event$VH.get(seg);
+        return (int)constants$62.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -119,17 +101,16 @@ public class XExposeEvent {
      * }
      */
     public static void send_event$set(MemorySegment seg, int x) {
-        XExposeEvent.send_event$VH.set(seg, x);
+        constants$62.const$1.set(seg, x);
     }
     public static int send_event$get(MemorySegment seg, long index) {
-        return (int)XExposeEvent.send_event$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$62.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void send_event$set(MemorySegment seg, long index, int x) {
-        XExposeEvent.send_event$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$62.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle display$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("display"));
     public static VarHandle display$VH() {
-        return XExposeEvent.display$VH;
+        return constants$62.const$2;
     }
     /**
      * Getter for field:
@@ -138,7 +119,7 @@ public class XExposeEvent {
      * }
      */
     public static MemorySegment display$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)XExposeEvent.display$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$62.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -147,17 +128,16 @@ public class XExposeEvent {
      * }
      */
     public static void display$set(MemorySegment seg, MemorySegment x) {
-        XExposeEvent.display$VH.set(seg, x);
+        constants$62.const$2.set(seg, x);
     }
     public static MemorySegment display$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)XExposeEvent.display$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$62.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void display$set(MemorySegment seg, long index, MemorySegment x) {
-        XExposeEvent.display$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$62.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle window$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("window"));
     public static VarHandle window$VH() {
-        return XExposeEvent.window$VH;
+        return constants$62.const$3;
     }
     /**
      * Getter for field:
@@ -166,7 +146,7 @@ public class XExposeEvent {
      * }
      */
     public static long window$get(MemorySegment seg) {
-        return (long)XExposeEvent.window$VH.get(seg);
+        return (long)constants$62.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -175,17 +155,16 @@ public class XExposeEvent {
      * }
      */
     public static void window$set(MemorySegment seg, long x) {
-        XExposeEvent.window$VH.set(seg, x);
+        constants$62.const$3.set(seg, x);
     }
     public static long window$get(MemorySegment seg, long index) {
-        return (long)XExposeEvent.window$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$62.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void window$set(MemorySegment seg, long index, long x) {
-        XExposeEvent.window$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$62.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle x$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("x"));
     public static VarHandle x$VH() {
-        return XExposeEvent.x$VH;
+        return constants$62.const$4;
     }
     /**
      * Getter for field:
@@ -194,7 +173,7 @@ public class XExposeEvent {
      * }
      */
     public static int x$get(MemorySegment seg) {
-        return (int)XExposeEvent.x$VH.get(seg);
+        return (int)constants$62.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -203,17 +182,16 @@ public class XExposeEvent {
      * }
      */
     public static void x$set(MemorySegment seg, int x) {
-        XExposeEvent.x$VH.set(seg, x);
+        constants$62.const$4.set(seg, x);
     }
     public static int x$get(MemorySegment seg, long index) {
-        return (int)XExposeEvent.x$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$62.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void x$set(MemorySegment seg, long index, int x) {
-        XExposeEvent.x$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$62.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle y$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("y"));
     public static VarHandle y$VH() {
-        return XExposeEvent.y$VH;
+        return constants$62.const$5;
     }
     /**
      * Getter for field:
@@ -222,7 +200,7 @@ public class XExposeEvent {
      * }
      */
     public static int y$get(MemorySegment seg) {
-        return (int)XExposeEvent.y$VH.get(seg);
+        return (int)constants$62.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -231,17 +209,16 @@ public class XExposeEvent {
      * }
      */
     public static void y$set(MemorySegment seg, int x) {
-        XExposeEvent.y$VH.set(seg, x);
+        constants$62.const$5.set(seg, x);
     }
     public static int y$get(MemorySegment seg, long index) {
-        return (int)XExposeEvent.y$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$62.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void y$set(MemorySegment seg, long index, int x) {
-        XExposeEvent.y$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$62.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle width$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("width"));
     public static VarHandle width$VH() {
-        return XExposeEvent.width$VH;
+        return constants$63.const$0;
     }
     /**
      * Getter for field:
@@ -250,7 +227,7 @@ public class XExposeEvent {
      * }
      */
     public static int width$get(MemorySegment seg) {
-        return (int)XExposeEvent.width$VH.get(seg);
+        return (int)constants$63.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -259,17 +236,16 @@ public class XExposeEvent {
      * }
      */
     public static void width$set(MemorySegment seg, int x) {
-        XExposeEvent.width$VH.set(seg, x);
+        constants$63.const$0.set(seg, x);
     }
     public static int width$get(MemorySegment seg, long index) {
-        return (int)XExposeEvent.width$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$63.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void width$set(MemorySegment seg, long index, int x) {
-        XExposeEvent.width$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$63.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle height$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("height"));
     public static VarHandle height$VH() {
-        return XExposeEvent.height$VH;
+        return constants$63.const$1;
     }
     /**
      * Getter for field:
@@ -278,7 +254,7 @@ public class XExposeEvent {
      * }
      */
     public static int height$get(MemorySegment seg) {
-        return (int)XExposeEvent.height$VH.get(seg);
+        return (int)constants$63.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -287,17 +263,16 @@ public class XExposeEvent {
      * }
      */
     public static void height$set(MemorySegment seg, int x) {
-        XExposeEvent.height$VH.set(seg, x);
+        constants$63.const$1.set(seg, x);
     }
     public static int height$get(MemorySegment seg, long index) {
-        return (int)XExposeEvent.height$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$63.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void height$set(MemorySegment seg, long index, int x) {
-        XExposeEvent.height$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$63.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle count$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("count"));
     public static VarHandle count$VH() {
-        return XExposeEvent.count$VH;
+        return constants$63.const$2;
     }
     /**
      * Getter for field:
@@ -306,7 +281,7 @@ public class XExposeEvent {
      * }
      */
     public static int count$get(MemorySegment seg) {
-        return (int)XExposeEvent.count$VH.get(seg);
+        return (int)constants$63.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -315,20 +290,20 @@ public class XExposeEvent {
      * }
      */
     public static void count$set(MemorySegment seg, int x) {
-        XExposeEvent.count$VH.set(seg, x);
+        constants$63.const$2.set(seg, x);
     }
     public static int count$get(MemorySegment seg, long index) {
-        return (int)XExposeEvent.count$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$63.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void count$set(MemorySegment seg, long index, int x) {
-        XExposeEvent.count$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$63.const$2.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
