@@ -22,23 +22,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class XFocusChangeEvent {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("type"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("serial"),
-        Constants$root.C_INT$LAYOUT.withName("send_event"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("display"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("window"),
-        Constants$root.C_INT$LAYOUT.withName("mode"),
-        Constants$root.C_INT$LAYOUT.withName("detail")
-    );
     public static MemoryLayout $LAYOUT() {
-        return XFocusChangeEvent.$struct$LAYOUT;
+        return constants$59.const$2;
     }
-    static final VarHandle type$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("type"));
     public static VarHandle type$VH() {
-        return XFocusChangeEvent.type$VH;
+        return constants$59.const$3;
     }
     /**
      * Getter for field:
@@ -47,7 +35,7 @@ public class XFocusChangeEvent {
      * }
      */
     public static int type$get(MemorySegment seg) {
-        return (int)XFocusChangeEvent.type$VH.get(seg);
+        return (int)constants$59.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -56,17 +44,16 @@ public class XFocusChangeEvent {
      * }
      */
     public static void type$set(MemorySegment seg, int x) {
-        XFocusChangeEvent.type$VH.set(seg, x);
+        constants$59.const$3.set(seg, x);
     }
     public static int type$get(MemorySegment seg, long index) {
-        return (int)XFocusChangeEvent.type$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$59.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void type$set(MemorySegment seg, long index, int x) {
-        XFocusChangeEvent.type$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$59.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle serial$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("serial"));
     public static VarHandle serial$VH() {
-        return XFocusChangeEvent.serial$VH;
+        return constants$59.const$4;
     }
     /**
      * Getter for field:
@@ -75,7 +62,7 @@ public class XFocusChangeEvent {
      * }
      */
     public static long serial$get(MemorySegment seg) {
-        return (long)XFocusChangeEvent.serial$VH.get(seg);
+        return (long)constants$59.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -84,17 +71,16 @@ public class XFocusChangeEvent {
      * }
      */
     public static void serial$set(MemorySegment seg, long x) {
-        XFocusChangeEvent.serial$VH.set(seg, x);
+        constants$59.const$4.set(seg, x);
     }
     public static long serial$get(MemorySegment seg, long index) {
-        return (long)XFocusChangeEvent.serial$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$59.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void serial$set(MemorySegment seg, long index, long x) {
-        XFocusChangeEvent.serial$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$59.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle send_event$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("send_event"));
     public static VarHandle send_event$VH() {
-        return XFocusChangeEvent.send_event$VH;
+        return constants$59.const$5;
     }
     /**
      * Getter for field:
@@ -103,7 +89,7 @@ public class XFocusChangeEvent {
      * }
      */
     public static int send_event$get(MemorySegment seg) {
-        return (int)XFocusChangeEvent.send_event$VH.get(seg);
+        return (int)constants$59.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -112,17 +98,16 @@ public class XFocusChangeEvent {
      * }
      */
     public static void send_event$set(MemorySegment seg, int x) {
-        XFocusChangeEvent.send_event$VH.set(seg, x);
+        constants$59.const$5.set(seg, x);
     }
     public static int send_event$get(MemorySegment seg, long index) {
-        return (int)XFocusChangeEvent.send_event$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$59.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void send_event$set(MemorySegment seg, long index, int x) {
-        XFocusChangeEvent.send_event$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$59.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle display$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("display"));
     public static VarHandle display$VH() {
-        return XFocusChangeEvent.display$VH;
+        return constants$60.const$0;
     }
     /**
      * Getter for field:
@@ -131,7 +116,7 @@ public class XFocusChangeEvent {
      * }
      */
     public static MemorySegment display$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)XFocusChangeEvent.display$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$60.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -140,17 +125,16 @@ public class XFocusChangeEvent {
      * }
      */
     public static void display$set(MemorySegment seg, MemorySegment x) {
-        XFocusChangeEvent.display$VH.set(seg, x);
+        constants$60.const$0.set(seg, x);
     }
     public static MemorySegment display$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)XFocusChangeEvent.display$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$60.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void display$set(MemorySegment seg, long index, MemorySegment x) {
-        XFocusChangeEvent.display$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$60.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle window$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("window"));
     public static VarHandle window$VH() {
-        return XFocusChangeEvent.window$VH;
+        return constants$60.const$1;
     }
     /**
      * Getter for field:
@@ -159,7 +143,7 @@ public class XFocusChangeEvent {
      * }
      */
     public static long window$get(MemorySegment seg) {
-        return (long)XFocusChangeEvent.window$VH.get(seg);
+        return (long)constants$60.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -168,17 +152,16 @@ public class XFocusChangeEvent {
      * }
      */
     public static void window$set(MemorySegment seg, long x) {
-        XFocusChangeEvent.window$VH.set(seg, x);
+        constants$60.const$1.set(seg, x);
     }
     public static long window$get(MemorySegment seg, long index) {
-        return (long)XFocusChangeEvent.window$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$60.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void window$set(MemorySegment seg, long index, long x) {
-        XFocusChangeEvent.window$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$60.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle mode$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("mode"));
     public static VarHandle mode$VH() {
-        return XFocusChangeEvent.mode$VH;
+        return constants$60.const$2;
     }
     /**
      * Getter for field:
@@ -187,7 +170,7 @@ public class XFocusChangeEvent {
      * }
      */
     public static int mode$get(MemorySegment seg) {
-        return (int)XFocusChangeEvent.mode$VH.get(seg);
+        return (int)constants$60.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -196,17 +179,16 @@ public class XFocusChangeEvent {
      * }
      */
     public static void mode$set(MemorySegment seg, int x) {
-        XFocusChangeEvent.mode$VH.set(seg, x);
+        constants$60.const$2.set(seg, x);
     }
     public static int mode$get(MemorySegment seg, long index) {
-        return (int)XFocusChangeEvent.mode$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$60.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void mode$set(MemorySegment seg, long index, int x) {
-        XFocusChangeEvent.mode$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$60.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle detail$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("detail"));
     public static VarHandle detail$VH() {
-        return XFocusChangeEvent.detail$VH;
+        return constants$60.const$3;
     }
     /**
      * Getter for field:
@@ -215,7 +197,7 @@ public class XFocusChangeEvent {
      * }
      */
     public static int detail$get(MemorySegment seg) {
-        return (int)XFocusChangeEvent.detail$VH.get(seg);
+        return (int)constants$60.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -224,20 +206,20 @@ public class XFocusChangeEvent {
      * }
      */
     public static void detail$set(MemorySegment seg, int x) {
-        XFocusChangeEvent.detail$VH.set(seg, x);
+        constants$60.const$3.set(seg, x);
     }
     public static int detail$get(MemorySegment seg, long index) {
-        return (int)XFocusChangeEvent.detail$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$60.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void detail$set(MemorySegment seg, long index, int x) {
-        XFocusChangeEvent.detail$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$60.const$3.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
