@@ -27,29 +27,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class XGraphicsExposeEvent {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("type"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("serial"),
-        Constants$root.C_INT$LAYOUT.withName("send_event"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("display"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("drawable"),
-        Constants$root.C_INT$LAYOUT.withName("x"),
-        Constants$root.C_INT$LAYOUT.withName("y"),
-        Constants$root.C_INT$LAYOUT.withName("width"),
-        Constants$root.C_INT$LAYOUT.withName("height"),
-        Constants$root.C_INT$LAYOUT.withName("count"),
-        Constants$root.C_INT$LAYOUT.withName("major_code"),
-        Constants$root.C_INT$LAYOUT.withName("minor_code"),
-        MemoryLayout.paddingLayout(32)
-    );
     public static MemoryLayout $LAYOUT() {
-        return XGraphicsExposeEvent.$struct$LAYOUT;
+        return constants$63.const$3;
     }
-    static final VarHandle type$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("type"));
     public static VarHandle type$VH() {
-        return XGraphicsExposeEvent.type$VH;
+        return constants$63.const$4;
     }
     /**
      * Getter for field:
@@ -58,7 +40,7 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static int type$get(MemorySegment seg) {
-        return (int)XGraphicsExposeEvent.type$VH.get(seg);
+        return (int)constants$63.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -67,17 +49,16 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static void type$set(MemorySegment seg, int x) {
-        XGraphicsExposeEvent.type$VH.set(seg, x);
+        constants$63.const$4.set(seg, x);
     }
     public static int type$get(MemorySegment seg, long index) {
-        return (int)XGraphicsExposeEvent.type$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$63.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void type$set(MemorySegment seg, long index, int x) {
-        XGraphicsExposeEvent.type$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$63.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle serial$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("serial"));
     public static VarHandle serial$VH() {
-        return XGraphicsExposeEvent.serial$VH;
+        return constants$63.const$5;
     }
     /**
      * Getter for field:
@@ -86,7 +67,7 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static long serial$get(MemorySegment seg) {
-        return (long)XGraphicsExposeEvent.serial$VH.get(seg);
+        return (long)constants$63.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -95,17 +76,16 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static void serial$set(MemorySegment seg, long x) {
-        XGraphicsExposeEvent.serial$VH.set(seg, x);
+        constants$63.const$5.set(seg, x);
     }
     public static long serial$get(MemorySegment seg, long index) {
-        return (long)XGraphicsExposeEvent.serial$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$63.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void serial$set(MemorySegment seg, long index, long x) {
-        XGraphicsExposeEvent.serial$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$63.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle send_event$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("send_event"));
     public static VarHandle send_event$VH() {
-        return XGraphicsExposeEvent.send_event$VH;
+        return constants$64.const$0;
     }
     /**
      * Getter for field:
@@ -114,7 +94,7 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static int send_event$get(MemorySegment seg) {
-        return (int)XGraphicsExposeEvent.send_event$VH.get(seg);
+        return (int)constants$64.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -123,17 +103,16 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static void send_event$set(MemorySegment seg, int x) {
-        XGraphicsExposeEvent.send_event$VH.set(seg, x);
+        constants$64.const$0.set(seg, x);
     }
     public static int send_event$get(MemorySegment seg, long index) {
-        return (int)XGraphicsExposeEvent.send_event$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$64.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void send_event$set(MemorySegment seg, long index, int x) {
-        XGraphicsExposeEvent.send_event$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$64.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle display$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("display"));
     public static VarHandle display$VH() {
-        return XGraphicsExposeEvent.display$VH;
+        return constants$64.const$1;
     }
     /**
      * Getter for field:
@@ -142,7 +121,7 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static MemorySegment display$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)XGraphicsExposeEvent.display$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$64.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -151,17 +130,16 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static void display$set(MemorySegment seg, MemorySegment x) {
-        XGraphicsExposeEvent.display$VH.set(seg, x);
+        constants$64.const$1.set(seg, x);
     }
     public static MemorySegment display$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)XGraphicsExposeEvent.display$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$64.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void display$set(MemorySegment seg, long index, MemorySegment x) {
-        XGraphicsExposeEvent.display$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$64.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle drawable$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("drawable"));
     public static VarHandle drawable$VH() {
-        return XGraphicsExposeEvent.drawable$VH;
+        return constants$64.const$2;
     }
     /**
      * Getter for field:
@@ -170,7 +148,7 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static long drawable$get(MemorySegment seg) {
-        return (long)XGraphicsExposeEvent.drawable$VH.get(seg);
+        return (long)constants$64.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -179,17 +157,16 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static void drawable$set(MemorySegment seg, long x) {
-        XGraphicsExposeEvent.drawable$VH.set(seg, x);
+        constants$64.const$2.set(seg, x);
     }
     public static long drawable$get(MemorySegment seg, long index) {
-        return (long)XGraphicsExposeEvent.drawable$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$64.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void drawable$set(MemorySegment seg, long index, long x) {
-        XGraphicsExposeEvent.drawable$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$64.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle x$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("x"));
     public static VarHandle x$VH() {
-        return XGraphicsExposeEvent.x$VH;
+        return constants$64.const$3;
     }
     /**
      * Getter for field:
@@ -198,7 +175,7 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static int x$get(MemorySegment seg) {
-        return (int)XGraphicsExposeEvent.x$VH.get(seg);
+        return (int)constants$64.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -207,17 +184,16 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static void x$set(MemorySegment seg, int x) {
-        XGraphicsExposeEvent.x$VH.set(seg, x);
+        constants$64.const$3.set(seg, x);
     }
     public static int x$get(MemorySegment seg, long index) {
-        return (int)XGraphicsExposeEvent.x$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$64.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void x$set(MemorySegment seg, long index, int x) {
-        XGraphicsExposeEvent.x$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$64.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle y$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("y"));
     public static VarHandle y$VH() {
-        return XGraphicsExposeEvent.y$VH;
+        return constants$64.const$4;
     }
     /**
      * Getter for field:
@@ -226,7 +202,7 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static int y$get(MemorySegment seg) {
-        return (int)XGraphicsExposeEvent.y$VH.get(seg);
+        return (int)constants$64.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -235,17 +211,16 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static void y$set(MemorySegment seg, int x) {
-        XGraphicsExposeEvent.y$VH.set(seg, x);
+        constants$64.const$4.set(seg, x);
     }
     public static int y$get(MemorySegment seg, long index) {
-        return (int)XGraphicsExposeEvent.y$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$64.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void y$set(MemorySegment seg, long index, int x) {
-        XGraphicsExposeEvent.y$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$64.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle width$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("width"));
     public static VarHandle width$VH() {
-        return XGraphicsExposeEvent.width$VH;
+        return constants$64.const$5;
     }
     /**
      * Getter for field:
@@ -254,7 +229,7 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static int width$get(MemorySegment seg) {
-        return (int)XGraphicsExposeEvent.width$VH.get(seg);
+        return (int)constants$64.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -263,17 +238,16 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static void width$set(MemorySegment seg, int x) {
-        XGraphicsExposeEvent.width$VH.set(seg, x);
+        constants$64.const$5.set(seg, x);
     }
     public static int width$get(MemorySegment seg, long index) {
-        return (int)XGraphicsExposeEvent.width$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$64.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void width$set(MemorySegment seg, long index, int x) {
-        XGraphicsExposeEvent.width$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$64.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle height$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("height"));
     public static VarHandle height$VH() {
-        return XGraphicsExposeEvent.height$VH;
+        return constants$65.const$0;
     }
     /**
      * Getter for field:
@@ -282,7 +256,7 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static int height$get(MemorySegment seg) {
-        return (int)XGraphicsExposeEvent.height$VH.get(seg);
+        return (int)constants$65.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -291,17 +265,16 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static void height$set(MemorySegment seg, int x) {
-        XGraphicsExposeEvent.height$VH.set(seg, x);
+        constants$65.const$0.set(seg, x);
     }
     public static int height$get(MemorySegment seg, long index) {
-        return (int)XGraphicsExposeEvent.height$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$65.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void height$set(MemorySegment seg, long index, int x) {
-        XGraphicsExposeEvent.height$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$65.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle count$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("count"));
     public static VarHandle count$VH() {
-        return XGraphicsExposeEvent.count$VH;
+        return constants$65.const$1;
     }
     /**
      * Getter for field:
@@ -310,7 +283,7 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static int count$get(MemorySegment seg) {
-        return (int)XGraphicsExposeEvent.count$VH.get(seg);
+        return (int)constants$65.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -319,17 +292,16 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static void count$set(MemorySegment seg, int x) {
-        XGraphicsExposeEvent.count$VH.set(seg, x);
+        constants$65.const$1.set(seg, x);
     }
     public static int count$get(MemorySegment seg, long index) {
-        return (int)XGraphicsExposeEvent.count$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$65.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void count$set(MemorySegment seg, long index, int x) {
-        XGraphicsExposeEvent.count$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$65.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle major_code$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("major_code"));
     public static VarHandle major_code$VH() {
-        return XGraphicsExposeEvent.major_code$VH;
+        return constants$65.const$2;
     }
     /**
      * Getter for field:
@@ -338,7 +310,7 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static int major_code$get(MemorySegment seg) {
-        return (int)XGraphicsExposeEvent.major_code$VH.get(seg);
+        return (int)constants$65.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -347,17 +319,16 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static void major_code$set(MemorySegment seg, int x) {
-        XGraphicsExposeEvent.major_code$VH.set(seg, x);
+        constants$65.const$2.set(seg, x);
     }
     public static int major_code$get(MemorySegment seg, long index) {
-        return (int)XGraphicsExposeEvent.major_code$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$65.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void major_code$set(MemorySegment seg, long index, int x) {
-        XGraphicsExposeEvent.major_code$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$65.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle minor_code$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("minor_code"));
     public static VarHandle minor_code$VH() {
-        return XGraphicsExposeEvent.minor_code$VH;
+        return constants$65.const$3;
     }
     /**
      * Getter for field:
@@ -366,7 +337,7 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static int minor_code$get(MemorySegment seg) {
-        return (int)XGraphicsExposeEvent.minor_code$VH.get(seg);
+        return (int)constants$65.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -375,20 +346,20 @@ public class XGraphicsExposeEvent {
      * }
      */
     public static void minor_code$set(MemorySegment seg, int x) {
-        XGraphicsExposeEvent.minor_code$VH.set(seg, x);
+        constants$65.const$3.set(seg, x);
     }
     public static int minor_code$get(MemorySegment seg, long index) {
-        return (int)XGraphicsExposeEvent.minor_code$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$65.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void minor_code$set(MemorySegment seg, long index, int x) {
-        XGraphicsExposeEvent.minor_code$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$65.const$3.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
