@@ -18,17 +18,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class XHostAddress {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("family"),
-        Constants$root.C_INT$LAYOUT.withName("length"),
-        Constants$root.C_POINTER$LAYOUT.withName("address")
-    );
     public static MemoryLayout $LAYOUT() {
-        return XHostAddress.$struct$LAYOUT;
+        return constants$30.const$3;
     }
-    static final VarHandle family$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("family"));
     public static VarHandle family$VH() {
-        return XHostAddress.family$VH;
+        return constants$30.const$4;
     }
     /**
      * Getter for field:
@@ -37,7 +31,7 @@ public class XHostAddress {
      * }
      */
     public static int family$get(MemorySegment seg) {
-        return (int)XHostAddress.family$VH.get(seg);
+        return (int)constants$30.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -46,17 +40,16 @@ public class XHostAddress {
      * }
      */
     public static void family$set(MemorySegment seg, int x) {
-        XHostAddress.family$VH.set(seg, x);
+        constants$30.const$4.set(seg, x);
     }
     public static int family$get(MemorySegment seg, long index) {
-        return (int)XHostAddress.family$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$30.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void family$set(MemorySegment seg, long index, int x) {
-        XHostAddress.family$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$30.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle length$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("length"));
     public static VarHandle length$VH() {
-        return XHostAddress.length$VH;
+        return constants$30.const$5;
     }
     /**
      * Getter for field:
@@ -65,7 +58,7 @@ public class XHostAddress {
      * }
      */
     public static int length$get(MemorySegment seg) {
-        return (int)XHostAddress.length$VH.get(seg);
+        return (int)constants$30.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -74,17 +67,16 @@ public class XHostAddress {
      * }
      */
     public static void length$set(MemorySegment seg, int x) {
-        XHostAddress.length$VH.set(seg, x);
+        constants$30.const$5.set(seg, x);
     }
     public static int length$get(MemorySegment seg, long index) {
-        return (int)XHostAddress.length$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$30.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void length$set(MemorySegment seg, long index, int x) {
-        XHostAddress.length$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$30.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle address$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("address"));
     public static VarHandle address$VH() {
-        return XHostAddress.address$VH;
+        return constants$31.const$0;
     }
     /**
      * Getter for field:
@@ -93,7 +85,7 @@ public class XHostAddress {
      * }
      */
     public static MemorySegment address$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)XHostAddress.address$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$31.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -102,20 +94,20 @@ public class XHostAddress {
      * }
      */
     public static void address$set(MemorySegment seg, MemorySegment x) {
-        XHostAddress.address$VH.set(seg, x);
+        constants$31.const$0.set(seg, x);
     }
     public static MemorySegment address$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)XHostAddress.address$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$31.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void address$set(MemorySegment seg, long index, MemorySegment x) {
-        XHostAddress.address$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$31.const$0.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
