@@ -22,22 +22,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class XKeyboardState {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("key_click_percent"),
-        Constants$root.C_INT$LAYOUT.withName("bell_percent"),
-        Constants$root.C_INT$LAYOUT.withName("bell_pitch"),
-        Constants$root.C_INT$LAYOUT.withName("bell_duration"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("led_mask"),
-        Constants$root.C_INT$LAYOUT.withName("global_auto_repeat"),
-        MemoryLayout.sequenceLayout(32, Constants$root.C_CHAR$LAYOUT).withName("auto_repeats"),
-        MemoryLayout.paddingLayout(32)
-    );
     public static MemoryLayout $LAYOUT() {
-        return XKeyboardState.$struct$LAYOUT;
+        return constants$46.const$0;
     }
-    static final VarHandle key_click_percent$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("key_click_percent"));
     public static VarHandle key_click_percent$VH() {
-        return XKeyboardState.key_click_percent$VH;
+        return constants$46.const$1;
     }
     /**
      * Getter for field:
@@ -46,7 +35,7 @@ public class XKeyboardState {
      * }
      */
     public static int key_click_percent$get(MemorySegment seg) {
-        return (int)XKeyboardState.key_click_percent$VH.get(seg);
+        return (int)constants$46.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -55,17 +44,16 @@ public class XKeyboardState {
      * }
      */
     public static void key_click_percent$set(MemorySegment seg, int x) {
-        XKeyboardState.key_click_percent$VH.set(seg, x);
+        constants$46.const$1.set(seg, x);
     }
     public static int key_click_percent$get(MemorySegment seg, long index) {
-        return (int)XKeyboardState.key_click_percent$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$46.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void key_click_percent$set(MemorySegment seg, long index, int x) {
-        XKeyboardState.key_click_percent$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$46.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle bell_percent$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("bell_percent"));
     public static VarHandle bell_percent$VH() {
-        return XKeyboardState.bell_percent$VH;
+        return constants$46.const$2;
     }
     /**
      * Getter for field:
@@ -74,7 +62,7 @@ public class XKeyboardState {
      * }
      */
     public static int bell_percent$get(MemorySegment seg) {
-        return (int)XKeyboardState.bell_percent$VH.get(seg);
+        return (int)constants$46.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -83,17 +71,16 @@ public class XKeyboardState {
      * }
      */
     public static void bell_percent$set(MemorySegment seg, int x) {
-        XKeyboardState.bell_percent$VH.set(seg, x);
+        constants$46.const$2.set(seg, x);
     }
     public static int bell_percent$get(MemorySegment seg, long index) {
-        return (int)XKeyboardState.bell_percent$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$46.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void bell_percent$set(MemorySegment seg, long index, int x) {
-        XKeyboardState.bell_percent$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$46.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle bell_pitch$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("bell_pitch"));
     public static VarHandle bell_pitch$VH() {
-        return XKeyboardState.bell_pitch$VH;
+        return constants$46.const$3;
     }
     /**
      * Getter for field:
@@ -102,7 +89,7 @@ public class XKeyboardState {
      * }
      */
     public static int bell_pitch$get(MemorySegment seg) {
-        return (int)XKeyboardState.bell_pitch$VH.get(seg);
+        return (int)constants$46.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -111,17 +98,16 @@ public class XKeyboardState {
      * }
      */
     public static void bell_pitch$set(MemorySegment seg, int x) {
-        XKeyboardState.bell_pitch$VH.set(seg, x);
+        constants$46.const$3.set(seg, x);
     }
     public static int bell_pitch$get(MemorySegment seg, long index) {
-        return (int)XKeyboardState.bell_pitch$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$46.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void bell_pitch$set(MemorySegment seg, long index, int x) {
-        XKeyboardState.bell_pitch$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$46.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle bell_duration$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("bell_duration"));
     public static VarHandle bell_duration$VH() {
-        return XKeyboardState.bell_duration$VH;
+        return constants$46.const$4;
     }
     /**
      * Getter for field:
@@ -130,7 +116,7 @@ public class XKeyboardState {
      * }
      */
     public static int bell_duration$get(MemorySegment seg) {
-        return (int)XKeyboardState.bell_duration$VH.get(seg);
+        return (int)constants$46.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -139,17 +125,16 @@ public class XKeyboardState {
      * }
      */
     public static void bell_duration$set(MemorySegment seg, int x) {
-        XKeyboardState.bell_duration$VH.set(seg, x);
+        constants$46.const$4.set(seg, x);
     }
     public static int bell_duration$get(MemorySegment seg, long index) {
-        return (int)XKeyboardState.bell_duration$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$46.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void bell_duration$set(MemorySegment seg, long index, int x) {
-        XKeyboardState.bell_duration$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$46.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle led_mask$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("led_mask"));
     public static VarHandle led_mask$VH() {
-        return XKeyboardState.led_mask$VH;
+        return constants$46.const$5;
     }
     /**
      * Getter for field:
@@ -158,7 +143,7 @@ public class XKeyboardState {
      * }
      */
     public static long led_mask$get(MemorySegment seg) {
-        return (long)XKeyboardState.led_mask$VH.get(seg);
+        return (long)constants$46.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -167,17 +152,16 @@ public class XKeyboardState {
      * }
      */
     public static void led_mask$set(MemorySegment seg, long x) {
-        XKeyboardState.led_mask$VH.set(seg, x);
+        constants$46.const$5.set(seg, x);
     }
     public static long led_mask$get(MemorySegment seg, long index) {
-        return (long)XKeyboardState.led_mask$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$46.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void led_mask$set(MemorySegment seg, long index, long x) {
-        XKeyboardState.led_mask$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$46.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle global_auto_repeat$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("global_auto_repeat"));
     public static VarHandle global_auto_repeat$VH() {
-        return XKeyboardState.global_auto_repeat$VH;
+        return constants$47.const$0;
     }
     /**
      * Getter for field:
@@ -186,7 +170,7 @@ public class XKeyboardState {
      * }
      */
     public static int global_auto_repeat$get(MemorySegment seg) {
-        return (int)XKeyboardState.global_auto_repeat$VH.get(seg);
+        return (int)constants$47.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -195,13 +179,13 @@ public class XKeyboardState {
      * }
      */
     public static void global_auto_repeat$set(MemorySegment seg, int x) {
-        XKeyboardState.global_auto_repeat$VH.set(seg, x);
+        constants$47.const$0.set(seg, x);
     }
     public static int global_auto_repeat$get(MemorySegment seg, long index) {
-        return (int)XKeyboardState.global_auto_repeat$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$47.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void global_auto_repeat$set(MemorySegment seg, long index, int x) {
-        XKeyboardState.global_auto_repeat$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$47.const$0.set(seg.asSlice(index*sizeof()), x);
     }
     public static MemorySegment auto_repeats$slice(MemorySegment seg) {
         return seg.asSlice(28, 32);
@@ -211,7 +195,7 @@ public class XKeyboardState {
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
