@@ -23,25 +23,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class XPropertyEvent {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("type"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("serial"),
-        Constants$root.C_INT$LAYOUT.withName("send_event"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("display"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("window"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("atom"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("time"),
-        Constants$root.C_INT$LAYOUT.withName("state"),
-        MemoryLayout.paddingLayout(32)
-    );
     public static MemoryLayout $LAYOUT() {
-        return XPropertyEvent.$struct$LAYOUT;
+        return constants$87.const$3;
     }
-    static final VarHandle type$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("type"));
     public static VarHandle type$VH() {
-        return XPropertyEvent.type$VH;
+        return constants$87.const$4;
     }
     /**
      * Getter for field:
@@ -50,7 +36,7 @@ public class XPropertyEvent {
      * }
      */
     public static int type$get(MemorySegment seg) {
-        return (int)XPropertyEvent.type$VH.get(seg);
+        return (int)constants$87.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -59,17 +45,16 @@ public class XPropertyEvent {
      * }
      */
     public static void type$set(MemorySegment seg, int x) {
-        XPropertyEvent.type$VH.set(seg, x);
+        constants$87.const$4.set(seg, x);
     }
     public static int type$get(MemorySegment seg, long index) {
-        return (int)XPropertyEvent.type$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$87.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void type$set(MemorySegment seg, long index, int x) {
-        XPropertyEvent.type$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$87.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle serial$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("serial"));
     public static VarHandle serial$VH() {
-        return XPropertyEvent.serial$VH;
+        return constants$87.const$5;
     }
     /**
      * Getter for field:
@@ -78,7 +63,7 @@ public class XPropertyEvent {
      * }
      */
     public static long serial$get(MemorySegment seg) {
-        return (long)XPropertyEvent.serial$VH.get(seg);
+        return (long)constants$87.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -87,17 +72,16 @@ public class XPropertyEvent {
      * }
      */
     public static void serial$set(MemorySegment seg, long x) {
-        XPropertyEvent.serial$VH.set(seg, x);
+        constants$87.const$5.set(seg, x);
     }
     public static long serial$get(MemorySegment seg, long index) {
-        return (long)XPropertyEvent.serial$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$87.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void serial$set(MemorySegment seg, long index, long x) {
-        XPropertyEvent.serial$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$87.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle send_event$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("send_event"));
     public static VarHandle send_event$VH() {
-        return XPropertyEvent.send_event$VH;
+        return constants$88.const$0;
     }
     /**
      * Getter for field:
@@ -106,7 +90,7 @@ public class XPropertyEvent {
      * }
      */
     public static int send_event$get(MemorySegment seg) {
-        return (int)XPropertyEvent.send_event$VH.get(seg);
+        return (int)constants$88.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -115,17 +99,16 @@ public class XPropertyEvent {
      * }
      */
     public static void send_event$set(MemorySegment seg, int x) {
-        XPropertyEvent.send_event$VH.set(seg, x);
+        constants$88.const$0.set(seg, x);
     }
     public static int send_event$get(MemorySegment seg, long index) {
-        return (int)XPropertyEvent.send_event$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$88.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void send_event$set(MemorySegment seg, long index, int x) {
-        XPropertyEvent.send_event$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$88.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle display$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("display"));
     public static VarHandle display$VH() {
-        return XPropertyEvent.display$VH;
+        return constants$88.const$1;
     }
     /**
      * Getter for field:
@@ -134,7 +117,7 @@ public class XPropertyEvent {
      * }
      */
     public static MemorySegment display$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)XPropertyEvent.display$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$88.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -143,17 +126,16 @@ public class XPropertyEvent {
      * }
      */
     public static void display$set(MemorySegment seg, MemorySegment x) {
-        XPropertyEvent.display$VH.set(seg, x);
+        constants$88.const$1.set(seg, x);
     }
     public static MemorySegment display$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)XPropertyEvent.display$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$88.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void display$set(MemorySegment seg, long index, MemorySegment x) {
-        XPropertyEvent.display$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$88.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle window$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("window"));
     public static VarHandle window$VH() {
-        return XPropertyEvent.window$VH;
+        return constants$88.const$2;
     }
     /**
      * Getter for field:
@@ -162,7 +144,7 @@ public class XPropertyEvent {
      * }
      */
     public static long window$get(MemorySegment seg) {
-        return (long)XPropertyEvent.window$VH.get(seg);
+        return (long)constants$88.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -171,17 +153,16 @@ public class XPropertyEvent {
      * }
      */
     public static void window$set(MemorySegment seg, long x) {
-        XPropertyEvent.window$VH.set(seg, x);
+        constants$88.const$2.set(seg, x);
     }
     public static long window$get(MemorySegment seg, long index) {
-        return (long)XPropertyEvent.window$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$88.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void window$set(MemorySegment seg, long index, long x) {
-        XPropertyEvent.window$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$88.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle atom$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("atom"));
     public static VarHandle atom$VH() {
-        return XPropertyEvent.atom$VH;
+        return constants$88.const$3;
     }
     /**
      * Getter for field:
@@ -190,7 +171,7 @@ public class XPropertyEvent {
      * }
      */
     public static long atom$get(MemorySegment seg) {
-        return (long)XPropertyEvent.atom$VH.get(seg);
+        return (long)constants$88.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -199,17 +180,16 @@ public class XPropertyEvent {
      * }
      */
     public static void atom$set(MemorySegment seg, long x) {
-        XPropertyEvent.atom$VH.set(seg, x);
+        constants$88.const$3.set(seg, x);
     }
     public static long atom$get(MemorySegment seg, long index) {
-        return (long)XPropertyEvent.atom$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$88.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void atom$set(MemorySegment seg, long index, long x) {
-        XPropertyEvent.atom$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$88.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle time$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("time"));
     public static VarHandle time$VH() {
-        return XPropertyEvent.time$VH;
+        return constants$88.const$4;
     }
     /**
      * Getter for field:
@@ -218,7 +198,7 @@ public class XPropertyEvent {
      * }
      */
     public static long time$get(MemorySegment seg) {
-        return (long)XPropertyEvent.time$VH.get(seg);
+        return (long)constants$88.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -227,17 +207,16 @@ public class XPropertyEvent {
      * }
      */
     public static void time$set(MemorySegment seg, long x) {
-        XPropertyEvent.time$VH.set(seg, x);
+        constants$88.const$4.set(seg, x);
     }
     public static long time$get(MemorySegment seg, long index) {
-        return (long)XPropertyEvent.time$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$88.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void time$set(MemorySegment seg, long index, long x) {
-        XPropertyEvent.time$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$88.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle state$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("state"));
     public static VarHandle state$VH() {
-        return XPropertyEvent.state$VH;
+        return constants$88.const$5;
     }
     /**
      * Getter for field:
@@ -246,7 +225,7 @@ public class XPropertyEvent {
      * }
      */
     public static int state$get(MemorySegment seg) {
-        return (int)XPropertyEvent.state$VH.get(seg);
+        return (int)constants$88.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -255,20 +234,20 @@ public class XPropertyEvent {
      * }
      */
     public static void state$set(MemorySegment seg, int x) {
-        XPropertyEvent.state$VH.set(seg, x);
+        constants$88.const$5.set(seg, x);
     }
     public static int state$get(MemorySegment seg, long index) {
-        return (int)XPropertyEvent.state$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$88.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void state$set(MemorySegment seg, long index, int x) {
-        XPropertyEvent.state$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$88.const$5.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
