@@ -22,23 +22,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class XResizeRequestEvent {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("type"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("serial"),
-        Constants$root.C_INT$LAYOUT.withName("send_event"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("display"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("window"),
-        Constants$root.C_INT$LAYOUT.withName("width"),
-        Constants$root.C_INT$LAYOUT.withName("height")
-    );
     public static MemoryLayout $LAYOUT() {
-        return XResizeRequestEvent.$struct$LAYOUT;
+        return constants$81.const$0;
     }
-    static final VarHandle type$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("type"));
     public static VarHandle type$VH() {
-        return XResizeRequestEvent.type$VH;
+        return constants$81.const$1;
     }
     /**
      * Getter for field:
@@ -47,7 +35,7 @@ public class XResizeRequestEvent {
      * }
      */
     public static int type$get(MemorySegment seg) {
-        return (int)XResizeRequestEvent.type$VH.get(seg);
+        return (int)constants$81.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -56,17 +44,16 @@ public class XResizeRequestEvent {
      * }
      */
     public static void type$set(MemorySegment seg, int x) {
-        XResizeRequestEvent.type$VH.set(seg, x);
+        constants$81.const$1.set(seg, x);
     }
     public static int type$get(MemorySegment seg, long index) {
-        return (int)XResizeRequestEvent.type$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$81.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void type$set(MemorySegment seg, long index, int x) {
-        XResizeRequestEvent.type$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$81.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle serial$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("serial"));
     public static VarHandle serial$VH() {
-        return XResizeRequestEvent.serial$VH;
+        return constants$81.const$2;
     }
     /**
      * Getter for field:
@@ -75,7 +62,7 @@ public class XResizeRequestEvent {
      * }
      */
     public static long serial$get(MemorySegment seg) {
-        return (long)XResizeRequestEvent.serial$VH.get(seg);
+        return (long)constants$81.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -84,17 +71,16 @@ public class XResizeRequestEvent {
      * }
      */
     public static void serial$set(MemorySegment seg, long x) {
-        XResizeRequestEvent.serial$VH.set(seg, x);
+        constants$81.const$2.set(seg, x);
     }
     public static long serial$get(MemorySegment seg, long index) {
-        return (long)XResizeRequestEvent.serial$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$81.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void serial$set(MemorySegment seg, long index, long x) {
-        XResizeRequestEvent.serial$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$81.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle send_event$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("send_event"));
     public static VarHandle send_event$VH() {
-        return XResizeRequestEvent.send_event$VH;
+        return constants$81.const$3;
     }
     /**
      * Getter for field:
@@ -103,7 +89,7 @@ public class XResizeRequestEvent {
      * }
      */
     public static int send_event$get(MemorySegment seg) {
-        return (int)XResizeRequestEvent.send_event$VH.get(seg);
+        return (int)constants$81.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -112,17 +98,16 @@ public class XResizeRequestEvent {
      * }
      */
     public static void send_event$set(MemorySegment seg, int x) {
-        XResizeRequestEvent.send_event$VH.set(seg, x);
+        constants$81.const$3.set(seg, x);
     }
     public static int send_event$get(MemorySegment seg, long index) {
-        return (int)XResizeRequestEvent.send_event$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$81.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void send_event$set(MemorySegment seg, long index, int x) {
-        XResizeRequestEvent.send_event$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$81.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle display$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("display"));
     public static VarHandle display$VH() {
-        return XResizeRequestEvent.display$VH;
+        return constants$81.const$4;
     }
     /**
      * Getter for field:
@@ -131,7 +116,7 @@ public class XResizeRequestEvent {
      * }
      */
     public static MemorySegment display$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)XResizeRequestEvent.display$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$81.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -140,17 +125,16 @@ public class XResizeRequestEvent {
      * }
      */
     public static void display$set(MemorySegment seg, MemorySegment x) {
-        XResizeRequestEvent.display$VH.set(seg, x);
+        constants$81.const$4.set(seg, x);
     }
     public static MemorySegment display$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)XResizeRequestEvent.display$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$81.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void display$set(MemorySegment seg, long index, MemorySegment x) {
-        XResizeRequestEvent.display$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$81.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle window$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("window"));
     public static VarHandle window$VH() {
-        return XResizeRequestEvent.window$VH;
+        return constants$81.const$5;
     }
     /**
      * Getter for field:
@@ -159,7 +143,7 @@ public class XResizeRequestEvent {
      * }
      */
     public static long window$get(MemorySegment seg) {
-        return (long)XResizeRequestEvent.window$VH.get(seg);
+        return (long)constants$81.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -168,17 +152,16 @@ public class XResizeRequestEvent {
      * }
      */
     public static void window$set(MemorySegment seg, long x) {
-        XResizeRequestEvent.window$VH.set(seg, x);
+        constants$81.const$5.set(seg, x);
     }
     public static long window$get(MemorySegment seg, long index) {
-        return (long)XResizeRequestEvent.window$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$81.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void window$set(MemorySegment seg, long index, long x) {
-        XResizeRequestEvent.window$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$81.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle width$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("width"));
     public static VarHandle width$VH() {
-        return XResizeRequestEvent.width$VH;
+        return constants$82.const$0;
     }
     /**
      * Getter for field:
@@ -187,7 +170,7 @@ public class XResizeRequestEvent {
      * }
      */
     public static int width$get(MemorySegment seg) {
-        return (int)XResizeRequestEvent.width$VH.get(seg);
+        return (int)constants$82.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -196,17 +179,16 @@ public class XResizeRequestEvent {
      * }
      */
     public static void width$set(MemorySegment seg, int x) {
-        XResizeRequestEvent.width$VH.set(seg, x);
+        constants$82.const$0.set(seg, x);
     }
     public static int width$get(MemorySegment seg, long index) {
-        return (int)XResizeRequestEvent.width$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$82.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void width$set(MemorySegment seg, long index, int x) {
-        XResizeRequestEvent.width$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$82.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle height$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("height"));
     public static VarHandle height$VH() {
-        return XResizeRequestEvent.height$VH;
+        return constants$82.const$1;
     }
     /**
      * Getter for field:
@@ -215,7 +197,7 @@ public class XResizeRequestEvent {
      * }
      */
     public static int height$get(MemorySegment seg) {
-        return (int)XResizeRequestEvent.height$VH.get(seg);
+        return (int)constants$82.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -224,20 +206,20 @@ public class XResizeRequestEvent {
      * }
      */
     public static void height$set(MemorySegment seg, int x) {
-        XResizeRequestEvent.height$VH.set(seg, x);
+        constants$82.const$1.set(seg, x);
     }
     public static int height$get(MemorySegment seg, long index) {
-        return (int)XResizeRequestEvent.height$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$82.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void height$set(MemorySegment seg, long index, int x) {
-        XResizeRequestEvent.height$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$82.const$1.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
