@@ -19,19 +19,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class XTextProperty {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_POINTER$LAYOUT.withName("value"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("encoding"),
-        Constants$root.C_INT$LAYOUT.withName("format"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("nitems")
-    );
     public static MemoryLayout $LAYOUT() {
-        return XTextProperty.$struct$LAYOUT;
+        return constants$215.const$4;
     }
-    static final VarHandle value$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("value"));
     public static VarHandle value$VH() {
-        return XTextProperty.value$VH;
+        return constants$215.const$5;
     }
     /**
      * Getter for field:
@@ -40,7 +32,7 @@ public class XTextProperty {
      * }
      */
     public static MemorySegment value$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)XTextProperty.value$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$215.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -49,17 +41,16 @@ public class XTextProperty {
      * }
      */
     public static void value$set(MemorySegment seg, MemorySegment x) {
-        XTextProperty.value$VH.set(seg, x);
+        constants$215.const$5.set(seg, x);
     }
     public static MemorySegment value$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)XTextProperty.value$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$215.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void value$set(MemorySegment seg, long index, MemorySegment x) {
-        XTextProperty.value$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$215.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle encoding$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("encoding"));
     public static VarHandle encoding$VH() {
-        return XTextProperty.encoding$VH;
+        return constants$216.const$0;
     }
     /**
      * Getter for field:
@@ -68,7 +59,7 @@ public class XTextProperty {
      * }
      */
     public static long encoding$get(MemorySegment seg) {
-        return (long)XTextProperty.encoding$VH.get(seg);
+        return (long)constants$216.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -77,17 +68,16 @@ public class XTextProperty {
      * }
      */
     public static void encoding$set(MemorySegment seg, long x) {
-        XTextProperty.encoding$VH.set(seg, x);
+        constants$216.const$0.set(seg, x);
     }
     public static long encoding$get(MemorySegment seg, long index) {
-        return (long)XTextProperty.encoding$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$216.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void encoding$set(MemorySegment seg, long index, long x) {
-        XTextProperty.encoding$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$216.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle format$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("format"));
     public static VarHandle format$VH() {
-        return XTextProperty.format$VH;
+        return constants$216.const$1;
     }
     /**
      * Getter for field:
@@ -96,7 +86,7 @@ public class XTextProperty {
      * }
      */
     public static int format$get(MemorySegment seg) {
-        return (int)XTextProperty.format$VH.get(seg);
+        return (int)constants$216.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -105,17 +95,16 @@ public class XTextProperty {
      * }
      */
     public static void format$set(MemorySegment seg, int x) {
-        XTextProperty.format$VH.set(seg, x);
+        constants$216.const$1.set(seg, x);
     }
     public static int format$get(MemorySegment seg, long index) {
-        return (int)XTextProperty.format$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$216.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void format$set(MemorySegment seg, long index, int x) {
-        XTextProperty.format$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$216.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle nitems$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("nitems"));
     public static VarHandle nitems$VH() {
-        return XTextProperty.nitems$VH;
+        return constants$216.const$2;
     }
     /**
      * Getter for field:
@@ -124,7 +113,7 @@ public class XTextProperty {
      * }
      */
     public static long nitems$get(MemorySegment seg) {
-        return (long)XTextProperty.nitems$VH.get(seg);
+        return (long)constants$216.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -133,20 +122,20 @@ public class XTextProperty {
      * }
      */
     public static void nitems$set(MemorySegment seg, long x) {
-        XTextProperty.nitems$VH.set(seg, x);
+        constants$216.const$2.set(seg, x);
     }
     public static long nitems$get(MemorySegment seg, long index) {
-        return (long)XTextProperty.nitems$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$216.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void nitems$set(MemorySegment seg, long index, long x) {
-        XTextProperty.nitems$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$216.const$2.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
