@@ -21,23 +21,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class XVisibilityEvent {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("type"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("serial"),
-        Constants$root.C_INT$LAYOUT.withName("send_event"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("display"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("window"),
-        Constants$root.C_INT$LAYOUT.withName("state"),
-        MemoryLayout.paddingLayout(32)
-    );
     public static MemoryLayout $LAYOUT() {
-        return XVisibilityEvent.$struct$LAYOUT;
+        return constants$67.const$0;
     }
-    static final VarHandle type$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("type"));
     public static VarHandle type$VH() {
-        return XVisibilityEvent.type$VH;
+        return constants$67.const$1;
     }
     /**
      * Getter for field:
@@ -46,7 +34,7 @@ public class XVisibilityEvent {
      * }
      */
     public static int type$get(MemorySegment seg) {
-        return (int)XVisibilityEvent.type$VH.get(seg);
+        return (int)constants$67.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -55,17 +43,16 @@ public class XVisibilityEvent {
      * }
      */
     public static void type$set(MemorySegment seg, int x) {
-        XVisibilityEvent.type$VH.set(seg, x);
+        constants$67.const$1.set(seg, x);
     }
     public static int type$get(MemorySegment seg, long index) {
-        return (int)XVisibilityEvent.type$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$67.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void type$set(MemorySegment seg, long index, int x) {
-        XVisibilityEvent.type$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$67.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle serial$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("serial"));
     public static VarHandle serial$VH() {
-        return XVisibilityEvent.serial$VH;
+        return constants$67.const$2;
     }
     /**
      * Getter for field:
@@ -74,7 +61,7 @@ public class XVisibilityEvent {
      * }
      */
     public static long serial$get(MemorySegment seg) {
-        return (long)XVisibilityEvent.serial$VH.get(seg);
+        return (long)constants$67.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -83,17 +70,16 @@ public class XVisibilityEvent {
      * }
      */
     public static void serial$set(MemorySegment seg, long x) {
-        XVisibilityEvent.serial$VH.set(seg, x);
+        constants$67.const$2.set(seg, x);
     }
     public static long serial$get(MemorySegment seg, long index) {
-        return (long)XVisibilityEvent.serial$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$67.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void serial$set(MemorySegment seg, long index, long x) {
-        XVisibilityEvent.serial$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$67.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle send_event$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("send_event"));
     public static VarHandle send_event$VH() {
-        return XVisibilityEvent.send_event$VH;
+        return constants$67.const$3;
     }
     /**
      * Getter for field:
@@ -102,7 +88,7 @@ public class XVisibilityEvent {
      * }
      */
     public static int send_event$get(MemorySegment seg) {
-        return (int)XVisibilityEvent.send_event$VH.get(seg);
+        return (int)constants$67.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -111,17 +97,16 @@ public class XVisibilityEvent {
      * }
      */
     public static void send_event$set(MemorySegment seg, int x) {
-        XVisibilityEvent.send_event$VH.set(seg, x);
+        constants$67.const$3.set(seg, x);
     }
     public static int send_event$get(MemorySegment seg, long index) {
-        return (int)XVisibilityEvent.send_event$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$67.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void send_event$set(MemorySegment seg, long index, int x) {
-        XVisibilityEvent.send_event$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$67.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle display$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("display"));
     public static VarHandle display$VH() {
-        return XVisibilityEvent.display$VH;
+        return constants$67.const$4;
     }
     /**
      * Getter for field:
@@ -130,7 +115,7 @@ public class XVisibilityEvent {
      * }
      */
     public static MemorySegment display$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)XVisibilityEvent.display$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$67.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -139,17 +124,16 @@ public class XVisibilityEvent {
      * }
      */
     public static void display$set(MemorySegment seg, MemorySegment x) {
-        XVisibilityEvent.display$VH.set(seg, x);
+        constants$67.const$4.set(seg, x);
     }
     public static MemorySegment display$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)XVisibilityEvent.display$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$67.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void display$set(MemorySegment seg, long index, MemorySegment x) {
-        XVisibilityEvent.display$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$67.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle window$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("window"));
     public static VarHandle window$VH() {
-        return XVisibilityEvent.window$VH;
+        return constants$67.const$5;
     }
     /**
      * Getter for field:
@@ -158,7 +142,7 @@ public class XVisibilityEvent {
      * }
      */
     public static long window$get(MemorySegment seg) {
-        return (long)XVisibilityEvent.window$VH.get(seg);
+        return (long)constants$67.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -167,17 +151,16 @@ public class XVisibilityEvent {
      * }
      */
     public static void window$set(MemorySegment seg, long x) {
-        XVisibilityEvent.window$VH.set(seg, x);
+        constants$67.const$5.set(seg, x);
     }
     public static long window$get(MemorySegment seg, long index) {
-        return (long)XVisibilityEvent.window$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$67.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void window$set(MemorySegment seg, long index, long x) {
-        XVisibilityEvent.window$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$67.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle state$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("state"));
     public static VarHandle state$VH() {
-        return XVisibilityEvent.state$VH;
+        return constants$68.const$0;
     }
     /**
      * Getter for field:
@@ -186,7 +169,7 @@ public class XVisibilityEvent {
      * }
      */
     public static int state$get(MemorySegment seg) {
-        return (int)XVisibilityEvent.state$VH.get(seg);
+        return (int)constants$68.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -195,20 +178,20 @@ public class XVisibilityEvent {
      * }
      */
     public static void state$set(MemorySegment seg, int x) {
-        XVisibilityEvent.state$VH.set(seg, x);
+        constants$68.const$0.set(seg, x);
     }
     public static int state$get(MemorySegment seg, long index) {
-        return (int)XVisibilityEvent.state$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$68.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void state$set(MemorySegment seg, long index, int x) {
-        XVisibilityEvent.state$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$68.const$0.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
