@@ -16,11 +16,8 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class fd_set {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        MemoryLayout.sequenceLayout(16, Constants$root.C_LONG_LONG$LAYOUT).withName("__fds_bits")
-    );
     public static MemoryLayout $LAYOUT() {
-        return fd_set.$struct$LAYOUT;
+        return constants$1.const$2;
     }
     public static MemorySegment __fds_bits$slice(MemorySegment seg) {
         return seg.asSlice(0, 128);
@@ -30,7 +27,7 @@ public class fd_set {
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
