@@ -17,17 +17,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class max_align_t {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_LONG_LONG$LAYOUT.withName("__clang_max_align_nonce1"),
-        MemoryLayout.paddingLayout(64),
-        MemoryLayout.paddingLayout(128).withName("__clang_max_align_nonce2")
-    );
     public static MemoryLayout $LAYOUT() {
-        return max_align_t.$struct$LAYOUT;
+        return constants$9.const$5;
     }
-    static final VarHandle __clang_max_align_nonce1$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__clang_max_align_nonce1"));
     public static VarHandle __clang_max_align_nonce1$VH() {
-        return max_align_t.__clang_max_align_nonce1$VH;
+        return constants$10.const$0;
     }
     /**
      * Getter for field:
@@ -36,7 +30,7 @@ public class max_align_t {
      * }
      */
     public static long __clang_max_align_nonce1$get(MemorySegment seg) {
-        return (long)max_align_t.__clang_max_align_nonce1$VH.get(seg);
+        return (long)constants$10.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -45,20 +39,20 @@ public class max_align_t {
      * }
      */
     public static void __clang_max_align_nonce1$set(MemorySegment seg, long x) {
-        max_align_t.__clang_max_align_nonce1$VH.set(seg, x);
+        constants$10.const$0.set(seg, x);
     }
     public static long __clang_max_align_nonce1$get(MemorySegment seg, long index) {
-        return (long)max_align_t.__clang_max_align_nonce1$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$10.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void __clang_max_align_nonce1$set(MemorySegment seg, long index, long x) {
-        max_align_t.__clang_max_align_nonce1$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$10.const$0.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
